--- a/renovate.json
+++ b/renovate.json
@@ -16,7 +16,7 @@
   "packageRules": [
     {
       "matchDatasources": ["npm"],
-      "minimumReleaseAge": "3 days".
+      "minimumReleaseAge": "3 days"
     }
   ],
   "timezone": "America/Chicago"
